<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".CreateAccount">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/v_top_hor"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cardview_dark_background"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_maintxt2"/>

    <View
        android:id="@+id/v_left_vert"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/v_right_vert"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <android.widget.Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_round_keyboard_arrow_left_24"
        app:layout_constraintTop_toTopOf="@id/tv_maintxt2"
        app:layout_constraintBottom_toBottomOf="@id/tv_maintxt2"
        app:layout_constraintRight_toLeftOf="@id/v_left_vert"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_maintxt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/museossans_300"
        android:text="@string/create_str"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/museossans_300"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/v_left_vert"
        app:layout_constraintTop_toBottomOf="@id/v_top_hor"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="@id/v_left_vert"
        app:layout_constraintEnd_toEndOf="@id/v_right_vert"
        app:layout_constraintTop_toBottomOf="@id/tv_email"/>

    <TextView
        android:id="@+id/tv_invalid_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/invalid_email_address"
        android:fontFamily="@font/museossans_300"
        android:textSize="17sp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/v_left_vert"
        app:layout_constraintEnd_toEndOf="@id/v_right_vert"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:drawableLeftCompat="@drawable/cross"
        android:visibility="gone"
        android:drawablePadding="10dp"
        android:background="@drawable/tv_redborder"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/tv_create_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_password"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/museossans_300"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/v_left_vert"
        app:layout_constraintTop_toBottomOf="@id/tv_invalid_email"/>

    <EditText
        android:id="@+id/et_create_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="10sp"
        android:inputType="textPassword"
        android:padding="10dp"
        android:hint="@string/see_criteria_below"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="@id/v_left_vert"
        app:layout_constraintEnd_toEndOf="@id/v_right_vert"
        app:layout_constraintTop_toBottomOf="@id/tv_create_pwd"/>

    <TextView
        android:id="@+id/tv_repeat_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_password"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/museossans_300"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/v_left_vert"
        app:layout_constraintTop_toBottomOf="@id/et_create_pwd"/>

    <EditText
        android:id="@+id/et_repeat_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:padding="10dp"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="@id/v_left_vert"
        app:layout_constraintEnd_toEndOf="@id/v_right_vert"
        app:layout_constraintTop_toBottomOf="@id/tv_repeat_pwd"/>

    <TextView
        android:id="@+id/tv_invalid_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/invalid_pass"
        android:fontFamily="@font/museossans_300"
        android:textSize="17sp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/v_left_vert"
        app:layout_constraintTop_toBottomOf="@id/et_repeat_pwd"
        app:layout_constraintEnd_toEndOf="@id/v_right_vert"
        app:drawableLeftCompat="@drawable/cross"
        android:visibility="gone"
        android:drawablePadding="10dp"
        android:background="@drawable/tv_redborder"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/tv_mismatch_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/password_mismatch"
        android:fontFamily="@font/museossans_300"
        android:textSize="17sp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/v_left_vert"
        app:layout_constraintTop_toBottomOf="@id/tv_invalid_pwd"
        app:layout_constraintEnd_toEndOf="@id/v_right_vert"
        app:drawableLeftCompat="@drawable/cross"
        android:visibility="gone"
        android:drawablePadding="10dp"
        android:background="@drawable/tv_redborder"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/tv_criteria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/pwd_criteria"
        android:fontFamily="@font/museossans_300"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/v_left_vert"
        app:layout_constraintEnd_toEndOf="@id/v_right_vert"
        app:layout_constraintTop_toBottomOf="@id/tv_mismatch_pwd"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"/>

    <android.widget.Button
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/gradient_button_background"
        android:fontFamily="@font/museossans_300"
        android:text="@string/next_button"
        android:textAllCaps="false"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@id/v_left_vert"
        app:layout_constraintEnd_toEndOf="@id/v_right_vert"
        app:layout_constraintTop_toBottomOf="@id/tv_criteria"

        android:layout_marginTop="40dp"
        android:enabled="false"/>


</androidx.constraintlayout.widget.ConstraintLayout>