<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/v_left_vert"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/v_right_vert"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_green_flag"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@null"/>

    <TextView
        android:id="@+id/tv_maintxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_text"
        android:textSize="17sp"
        android:fontFamily="@font/museossans_300"
        android:textColor="@color/white"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="@id/iv_logo"
        app:layout_constraintEnd_toEndOf="@id/iv_logo"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <ImageView
        android:id="@+id/iv_check1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tick"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_maintxt"
        app:layout_constraintStart_toStartOf="@id/tv_maintxt"
        android:contentDescription="@null" />

    <ImageView
        android:id="@+id/iv_check2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tick"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/iv_check1"
        app:layout_constraintStart_toStartOf="@id/tv_maintxt"
        android:contentDescription="@null" />

    <ImageView
        android:id="@+id/iv_check3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tick"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/iv_check2"
        app:layout_constraintStart_toStartOf="@id/tv_maintxt"
        android:contentDescription="@null"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_health"
        android:textColor="@color/white"
        android:fontFamily="@font/museossans_300"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/iv_check1"
        app:layout_constraintTop_toTopOf="@id/iv_check1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_rescue"
        android:textColor="@color/white"
        android:fontFamily="@font/museossans_300"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/iv_check2"
        app:layout_constraintTop_toTopOf="@id/iv_check2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/policy_info"
        android:textColor="@color/white"
        android:fontFamily="@font/museossans_300"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/iv_check3"
        app:layout_constraintTop_toTopOf="@id/iv_check3"/>

    <android.widget.Button
        android:id="@+id/btn_go_to_create"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/gradient_button_background"
        android:fontFamily="@font/museossans_300"
        android:text="@string/create_str"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/v_right_vert"
        app:layout_constraintStart_toStartOf="@id/v_left_vert" />


</androidx.constraintlayout.widget.ConstraintLayout>